--- a/SmartFarm/Base.lproj/Main.storyboard
+++ b/SmartFarm/Base.lproj/Main.storyboard
@@ -17,31 +17,99 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7CX-U8-U5j">
-                                <rect key="frame" x="75" y="182" width="31" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="连接"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7CX-U8-U5j">
+                                <rect key="frame" x="65" y="170" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Jgx-l3-cSa"/>
+                                    <constraint firstAttribute="height" constant="30" id="tD6-Vm-lAx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="连接">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="Connect:" destination="9pv-A4-QxB" eventType="touchUpInside" id="XQh-Um-FXr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iaG-sy-nmb">
-                                <rect key="frame" x="75" y="250" width="31" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="订阅"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connect" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NSm-fd-DOK">
+                                <rect key="frame" x="165" y="174" width="77" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Liq-X9-4Pa"/>
+                                    <constraint firstAttribute="width" constant="77" id="gTz-BY-fiO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subscribe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfx-9S-UIW">
+                                <rect key="frame" x="165" y="248" width="77" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Hhf-4e-Hie"/>
+                                    <constraint firstAttribute="width" constant="77" id="leW-65-ODV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收到的消息是：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kTO-K7-Tqx">
+                                <rect key="frame" x="65" y="323" width="122" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="SZQ-Xw-0F9"/>
+                                    <constraint firstAttribute="width" constant="122" id="geW-MT-3Iy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iaG-sy-nmb">
+                                <rect key="frame" x="65" y="243" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="8tY-S0-9me"/>
+                                    <constraint firstAttribute="width" constant="50" id="SOb-Xx-EF8"/>
+                                </constraints>
+                                <state key="normal" title="订阅">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="SubScribe:" destination="9pv-A4-QxB" eventType="touchUpInside" id="cAN-De-AAi"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lAq-Uy-g0X">
+                                <rect key="frame" x="65" y="373" width="77.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="lAq-Uy-g0X" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="65" id="7pC-rT-y2R"/>
+                            <constraint firstItem="NSm-fd-DOK" firstAttribute="leading" secondItem="7CX-U8-U5j" secondAttribute="trailing" constant="50" id="9pf-qN-liF"/>
+                            <constraint firstItem="lAq-Uy-g0X" firstAttribute="top" secondItem="kTO-K7-Tqx" secondAttribute="bottom" constant="29" id="E1p-Wq-UZe"/>
+                            <constraint firstItem="NSm-fd-DOK" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="154" id="Se3-p7-mtO"/>
+                            <constraint firstItem="kTO-K7-Tqx" firstAttribute="top" secondItem="iaG-sy-nmb" secondAttribute="bottom" constant="50" id="Tyh-I5-Cq0"/>
+                            <constraint firstItem="7CX-U8-U5j" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="65" id="Um6-cX-9Va"/>
+                            <constraint firstItem="Xfx-9S-UIW" firstAttribute="top" secondItem="NSm-fd-DOK" secondAttribute="bottom" constant="53" id="aW2-RU-mFH"/>
+                            <constraint firstItem="Xfx-9S-UIW" firstAttribute="leading" secondItem="iaG-sy-nmb" secondAttribute="trailing" constant="50" id="oty-hp-xKz"/>
+                            <constraint firstItem="iaG-sy-nmb" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="65" id="p12-xA-aX5"/>
+                            <constraint firstItem="7CX-U8-U5j" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="150" id="pBM-5L-ht7"/>
+                            <constraint firstItem="iaG-sy-nmb" firstAttribute="top" secondItem="7CX-U8-U5j" secondAttribute="bottom" constant="43" id="rCx-6f-MMA"/>
+                            <constraint firstItem="kTO-K7-Tqx" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="65" id="xUK-xF-5hM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="btnConnect" destination="7CX-U8-U5j" id="4TI-Sr-8Bd"/>
+                        <outlet property="btnSubscribe" destination="iaG-sy-nmb" id="YkQ-X0-qNo"/>
+                        <outlet property="lblConnect" destination="NSm-fd-DOK" id="kSU-eV-otv"/>
+                        <outlet property="lblMessages" destination="lAq-Uy-g0X" id="uVB-FW-MB7"/>
+                        <outlet property="lblSubscribe" destination="Xfx-9S-UIW" id="us3-XI-F26"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
+            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
