--- a/SmartFarm/Base.lproj/Main.storyboard
+++ b/SmartFarm/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="23" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOY-qP-9FB">
-                                <rect key="frame" x="256" y="126" width="61" height="63"/>
+                                <rect key="frame" x="238" y="126" width="79" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="52"/>
                                 <color key="textColor" red="0.29803921568627451" green="0.85098039215686272" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -74,20 +74,35 @@
                                 <rect key="frame" x="12" y="246" width="350" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HjX-x2-0LF">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HjX-x2-0LF">
                                 <rect key="frame" x="55" y="256" width="86" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="传感器" image="icon_sensor_active">
-                                    <color key="titleColor" red="0.29803921568627451" green="0.85098039215686272" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="传感器" image="icon_sensor">
+                                    <color key="titleColor" red="0.77647058823529413" green="0.79607843137254897" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="disabled" image="icon_sensor">
+                                    <color key="titleColor" red="0.77647058823529413" green="0.79607843137254897" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="selected" image="icon_sensor_active">
+                                    <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="highlighted" image="icon_sensor_active">
+                                    <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OnE-ne-tWc">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OnE-ne-tWc">
                                 <rect key="frame" x="238" y="256" width="86" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="控制器" image="icon_controller_active">
-                                    <color key="titleColor" red="0.50980392156862742" green="0.98039215686274506" blue="0.70588235294117652" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="控制器" image="icon_controller">
+                                    <color key="titleColor" red="0.77647058823529413" green="0.79607843137254897" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="selected" image="icon_controller_active">
+                                    <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="highlighted" image="icon_controller_active">
+                                    <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
                         </subviews>
@@ -98,6 +113,8 @@
                         <inset key="largeContentSizeImageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="1"/>
                     </tabBarItem>
                     <connections>
+                        <outlet property="btnController" destination="OnE-ne-tWc" id="6Iu-rZ-O17"/>
+                        <outlet property="btnSensor" destination="HjX-x2-0LF" id="Wrf-xt-7Wx"/>
                         <outlet property="imgViewWea" destination="PWY-PD-MjB" id="zou-5d-NpF"/>
                         <outlet property="weaPM" destination="sX2-QW-5P8" id="J50-OI-TxD"/>
                         <outlet property="weaTemp" destination="oOY-qP-9FB" id="Xp2-F0-MuI"/>
@@ -345,11 +362,13 @@
         <image name="film_roller" width="500" height="114"/>
         <image name="icon_camera" width="20" height="25"/>
         <image name="icon_camera_active" width="20" height="25"/>
+        <image name="icon_controller" width="20" height="18"/>
         <image name="icon_controller_active" width="20" height="18"/>
         <image name="icon_home" width="26" height="25"/>
         <image name="icon_home_active" width="25" height="24"/>
         <image name="icon_scene" width="25" height="25"/>
         <image name="icon_scene_active" width="23" height="23"/>
+        <image name="icon_sensor" width="19" height="21"/>
         <image name="icon_sensor_active" width="19" height="21"/>
         <image name="icon_setting" width="24" height="25"/>
         <image name="icon_setting_active" width="23" height="22"/>
